2011-01-25  Dan Osipov <dosipov@phillyburbs.com>
	* Fix #10408: No replacement of special characters after upload in non-UTF-8-installations (Thanks Lorenz Ulrich)
	* Fix #15342: Call to deprecated function in class.tx_dam_tcefunc.php (Thanks Lorenz Ulrich)

2011-01-23  Dan Osipov <dosipov@phillyburbs.com>
	* Fix #17218: Media>List>Process doesn't work in 1.1 branch and trunk (Thanks Lorenz Ulrich)

2011-01-22  Lorenz Ulrich <lorenz.ulrich@visol.ch>
 	* Fix #10318: DAM > Info crashes on larger installs (Thanks to Thorsten Kahler)

2011-01-22  Dan Osipov <dosipov@phillyburbs.com>
	* Fix #13468: Title with quote gets trunked (Thanks Dmitry Dulepov)

2011-01-18  Dan Osipov <dosipov@phillyburbs.com>
	* Fix #13676: Showing meta information in workspace view (Thanks Chris Mueller)

2011-01-16  Lorenz Ulrich <lorenz.ulrich@visol.ch>
	* Fix #16062: <label> for "Mark entries with missing files as deleted" in Media/Tool/Check index (Thanks to Christian Weiske)

2011-01-16  Lorenz Ulrich <lorenz.ulrich@visol.ch>
	* Fix #16543: batch edit not working in Typo3 4.5

2010-12-09  Lorenz Ulrich <lorenz.ulrich@visol.ch>
	* Fix #16390: DAM floods deprecation log by using $ICON_TYPES (Thanks to Uschi Renziehausen)

2010-11-07  Dan Osipov <dosipov@phillyburbs.com>
	* Fix #15651: Table fields in extension manager (Thanks Chris Mueller)
	* Upgrade version number in ext_emconf.php

2010-11-06  Dan Osipov <dosipov@phillyburbs.com>
	* Fix #15566: When trying to edit a media link in the RTE, the external url tab is activated (Thanks Stanislas Rolland)

2010-08-21  Dan Osipov <dosipov@phillyburbs.com>
	* Fix #15099: Bugfix: "Reference to main window is not set properly" after selecting an uploaded file in RTE link dialogue (Thanks to Lorenz Ulrich)

2010-08-03  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #12525: database column is not DBAL-compatible

2010-07-11  Dan Osipov <dosipov@phillyburbs.com>