@@ -40,9 +40,11 @@ class tx_dam_rtehtmlarea_browse_links implements t3lib_browseLinksHook {
 	protected $mode;
 	protected $act;
 	protected $bparams;
-	protected $isHtmlAreaRTE;
-	protected $isEnabled;
-	protected $browserRenderObj; // DAM browser object
+	protected $isEnabled = FALSE;
+		// DAM browser object
+	protected $browserRenderObj;
+		// Link title derived from the DAM database
+	protected $damTitle = '';
 
 	/**
 	 * initializes the hook object
@@ -52,15 +54,18 @@ class tx_dam_rtehtmlarea_browse_links implements t3lib_browseLinksHook {
 	 * @return	void
 	 */
 	public function init($parentObject, $additionalParameters) {
-		$this->invokingObject =& $parentObject;
-		$this->mode =& $this->invokingObject->mode;
-		$this->act =& $this->invokingObject->act;
-		$this->bparams =& $this->invokingObject->bparams;
-		$invokingObjectClass = get_class($this->invokingObject);
-		$this->isHtmlAreaRTE = ($invokingObjectClass == 'tx_rtehtmlarea_browse_links' || $invokingObjectClass == 'ux_tx_rtehtmlarea_browse_links');
-		$this->isEnabled = ((string)$this->mode == 'rte') && $this->isHtmlAreaRTE;
-		if ($this->isEnabled) {
-			$this->invokingObject->anchorTypes[] = 'media';
+		$invokingObjectClass = get_class($parentObject);
+		$enabled = ((string) $parentObject->mode == 'rte') && ($invokingObjectClass == 'tx_rtehtmlarea_browse_links' || $invokingObjectClass == 'ux_tx_rtehtmlarea_browse_links');
+		if ($enabled) {
+			$this->isEnabled = TRUE;
+			$this->invokingObject =& $parentObject;
+			$this->mode =& $this->invokingObject->mode;
+			$this->act =& $this->invokingObject->act;
+			$this->bparams =& $this->invokingObject->bparams;
+			if ($this->isEnabled) {
+				$this->invokingObject->anchorTypes[] = 'media';
+			}
+			$GLOBALS['LANG']->includeLLFile('EXT:dam/compat/locallang.xml');
 		}
 	}
 
@@ -127,8 +132,8 @@ class tx_dam_rtehtmlarea_browse_links implements t3lib_browseLinksHook {
 		if ($this->isEnabled) {
 			switch ($linkSelectorAction) {
 				case 'media':
-					$content .= $this->invokingObject->addAttributesForm();
 					$this->initMediaBrowser();
+					$content .= $this->addAttributesForm();
 					$content .= $this->browserRenderObj->part_rte_linkfile();
 					$this->addDAMStylesAndJSArrays();
 					break;
@@ -156,10 +161,10 @@ class tx_dam_rtehtmlarea_browse_links implements t3lib_browseLinksHook {
 	 * Checks the current URL and determines what to do
 	 * If the link was determined to be a file link, then set the action to 'media'
 	 *
-	 * @param	unknown_type		$href
-	 * @param	unknown_type		$siteUrl
-	 * @param	unknown_type		$info
-	 * @return	unknown_type
+	 * @param	string		$href
+	 * @param	string		$siteUrl
+	 * @param	array		$info
+	 * @return	array
 	 */
 	public function parseCurrentUrl($href, $siteUrl, $info) {
 		if ($this->isEnabled && $info['act'] == 'file') {
@@ -192,6 +197,170 @@ class tx_dam_rtehtmlarea_browse_links implements t3lib_browseLinksHook {
 		$this->invokingObject->doc->inDocStylesArray = array_merge($this->invokingObject->doc->inDocStylesArray, $this->browserRenderObj->doc->inDocStylesArray);
 		$this->invokingObject->doc->JScodeArray = array_merge($this->invokingObject->doc->JScodeArray, $this->browserRenderObj->doc->JScodeArray);
 	}
+	
+	/**
+	 * Redefines same function from invoking object in order to invoke local verion of addTitleSelector()
+	 *
+	 * @return	string		the html code to be added to the form
+	 */
+	protected function addAttributesForm() {
+		$ltargetForm = '';
+			// Add target, class selector box, title and parameters fields:
+		$ltarget = $this->invokingObject->addTargetSelector();
+		$lclass = $this->addClassSelector();
+		$ltitle = $this->addTitleSelector();
+		if ($ltarget || $lclass || $ltitle) {
+			$ltargetForm = $this->invokingObject->wrapInForm($ltarget.$lclass.$ltitle);
+		}
+		return $ltargetForm;
+	}
+
+	/**
+	 * Set the link title that may be derived from the DAM meta data
+	 *
+	 * @return	void
+	 */
+	 protected function setDAMTitle() {
+		if (t3lib_div::inList($GLOBALS['TYPO3_CONF_VARS']['EXTCONF']['rtehtmlarea']['plugins']['TYPO3Link']['additionalAttributes'], 'usedamcolumn') && $this->invokingObject->buttonConfig[$this->act.'.']['properties.']['title.']['useDAMColumn']) {
+			$mediaId = $this->invokingObject->curUrlArray['txdam'];
+			if ($mediaId) {
+					// Checking if the id-parameter is int and get meta data
+				if (t3lib_div::testInt($mediaId)) {
+					$meta = tx_dam::meta_getDataByUid($mediaId);
+				}
+					// Generating configured title from meta data
+				if (is_array($meta)) {
+					require_once(PATH_txdam.'lib/class.tx_dam_guifunc.php');
+					$displayItems = $this->invokingObject->buttonConfig[$this->act.'.']['properties.']['title.']['useDAMColumn.']['displayItems'] ? $this->invokingObject->buttonConfig[$this->act.'.']['properties.']['title.']['useDAMColumn.']['displayItems'] : '';
+					$this->damTitle = tx_dam_guiFunc::meta_compileHoverText($meta, $displayItems, ', ');
+				} else {
+					$this->damTitle = 'No media record found: ' . $mediaId;
+				}
+			}
+		}
+	 }
+
+	/**
+	 * Redefines same function from invoking object in order to change the onChange event on the class selector
+	 *
+	 * @return	string		the html code to be added to the form
+	 */
+	protected function addClassSelector() {
+		$selectClass = '';
+		if (t3lib_div::inList($GLOBALS['TYPO3_CONF_VARS']['EXTCONF']['rtehtmlarea']['plugins']['TYPO3Link']['additionalAttributes'], 'usedamcolumn') && $this->invokingObject->buttonConfig[$this->act.'.']['properties.']['title.']['useDAMColumn']) {
+			if ($this->invokingObject->classesAnchorJSOptions[$this->act]) {
+				$selectClass ='
+							<tr>
+								<td>'.$GLOBALS['LANG']->getLL('anchor_class',1).':</td>
+								<td colspan="3">
+									<select name="anchor_class" onchange="' . $this->getClassOnChangeJS() . '">
+										' . $this->invokingObject->classesAnchorJSOptions[$this->act] . '
+									</select>
+								</td>
+							</tr>';
+			}
+		} else {
+			$selectClass = $this->invokingObject->addClassSelector();
+		}
+		return $selectClass;
+	}
+
+	/**
+	 * Redefines same function from invoking object in order to change the class selector onChange event
+	 *
+	 * @return	string	class selector onChange JS code
+	 */
+	 protected function getClassOnChangeJS() {
+		 $classOnChangeJS = $this->invokingObject->getClassOnChangeJS();
+		 if (t3lib_div::inList($GLOBALS['TYPO3_CONF_VARS']['EXTCONF']['rtehtmlarea']['plugins']['TYPO3Link']['additionalAttributes'], 'usedamcolumn') && $this->invokingObject->buttonConfig[$this->act.'.']['properties.']['title.']['useDAMColumn']) {
+			$classOnChangeJS .= '
+					if (document.getElementById(\'rtehtmlarea-dam-browse-links-useDAMColumn\').checked && '. ($this->damTitle ? 'true' : 'false') . ') {
+						var damTitle = \'' . htmlspecialchars($this->damTitle) . '\';
+						if (damTitle) {
+							document.getElementById(\'rtehtmlarea-browse-links-title-readonly\').innerHTML = damTitle;
+							document.ltargetform.anchor_title.value = damTitle;
+							browse_links_setTitle(damTitle);
+						}
+						dam_browse_links_setTitle(true);
+					}
+							';
+		 }
+		 return $classOnChangeJS;
+	 }
+
+	/**
+	 * Redefines same function from invoking object in order to add a checkbox to specify how the title attribute should be handled
+	 *
+	 * @return	string		the html code to be added to the form
+	 */
+	protected function addTitleSelector() {
+		$titleSelector = $this->invokingObject->addTitleSelector();
+		if ($titleSelector && t3lib_div::inList($GLOBALS['TYPO3_CONF_VARS']['EXTCONF']['rtehtmlarea']['plugins']['TYPO3Link']['additionalAttributes'], 'usedamcolumn') && $this->invokingObject->buttonConfig[$this->act.'.']['properties.']['title.']['useDAMColumn']) {
+				// Adding checkbox to the form
+			$checked = ($this->invokingObject->curUrlArray['usedamcolumn'] == 'true') || $this->invokingObject->buttonConfig[$this->act.'.']['properties.']['title.']['useDAMColumn.']['checked'] || $this->invokingObject->buttonConfig[$this->act.'.']['properties.']['title.']['useDAMColumn.']['enforce'];
+			$titleSelector .= '
+							<tr>
+								<td>
+									<label for="rtehtmlarea-dam-browse-links-useDAMColumn">'.$GLOBALS['LANG']->getLL('useDAMColumn',1).':</label>
+								</td>
+								<td colspan="3">
+									<input name="rtehtmlarea-dam-browse-links-useDAMColumn" id="rtehtmlarea-dam-browse-links-useDAMColumn" onchange="if (this.checked) { document.getElementById(\'rtehtmlarea-browse-links-title-readonly\').innerHTML =   \'' . htmlspecialchars($this->damTitle) . '\'; } browse_links_setAdditionalValue(\'usedamcolumn\', this.checked); dam_browse_links_setTitle(this.checked);"' . ($checked ? ' checked="checked" ' : ' ') . 'type="checkbox" />
+								</td>
+							</tr>';
+				// Adding additional JS for this checkbox
+			$this->browserRenderObj->doc->JScodeArray['rtehtmlarea-DAMTitle'] = $this->getTitleAttributeJSCode();
+		}
+		return $titleSelector;
+	}
+	
+	protected function getTitleAttributeJSCode() {
+		return '
+			function dam_browse_links_setTitle(useDAMColumn, enforce) {
+				if (document.getElementById("rtehtmlarea-browse-links-anchor_title")) {
+					if (useDAMColumn) {
+						document.getElementById("rtehtmlarea-browse-links-title-input").style.display = "none";
+						document.getElementById("rtehtmlarea-browse-links-title-readonly").style.display = "inline";
+						var damTitle = document.getElementById("rtehtmlarea-browse-links-title-readonly").innerHTML;
+						if (damTitle) {
+							document.ltargetform.anchor_title.value = damTitle;
+							browse_links_setTitle(damTitle);
+						}
+						if (' . (!$this->invokingObject->curUrlArray['href']?'true':'false') . ') {
+							document.getElementById("rtehtmlarea-browse-links-title-label").style.display = "none";
+							document.getElementById("rtehtmlarea-browse-links-title-readonly").style.display = "none";
+						}
+						if (enforce) {
+							document.getElementById("rtehtmlarea-dam-browse-links-useDAMColumn").setAttribute("disabled", true);
+						}
+					} else {
+						document.getElementById("rtehtmlarea-browse-links-title-label").style.display = "inline";
+						document.getElementById("rtehtmlarea-browse-links-title-input").style.display = "inline";
+						document.getElementById("rtehtmlarea-browse-links-title-readonly").style.display = "none";
+					}
+				}
+			}
+		';
+	}
+	
+	/**
+	 * Modifies the body tag additions array and returns it
+	 *
+	 * @param	array	body tag additions
+	 * @return	array	modified body tag additions
+	 */
+	public function addBodyTagAdditions($bodyTagAdditions) {
+		if (t3lib_div::inList($GLOBALS['TYPO3_CONF_VARS']['EXTCONF']['rtehtmlarea']['plugins']['TYPO3Link']['additionalAttributes'], 'usedamcolumn') && $this->invokingObject->buttonConfig[$this->act.'.']['properties.']['title.']['useDAMColumn']) {
+			$this->setDAMTitle();
+				// Adding onLoad processing if the checkbox is pre-checked
+			$checked = ($this->invokingObject->curUrlArray['usedamcolumn'] == 'true') || $this->invokingObject->buttonConfig[$this->act.'.']['properties.']['title.']['useDAMColumn.']['checked'] || $this->invokingObject->buttonConfig[$this->act.'.']['properties.']['title.']['useDAMColumn.']['enforce'];
+			if ($checked) {
+				$enforce = $this->invokingObject->buttonConfig[$this->act.'.']['properties.']['title.']['useDAMColumn.']['enforce'] ? 'true' : 'false';
+				$bodyTagAdditions['onLoad'] .= 'document.getElementById(\'rtehtmlarea-browse-links-title-readonly\').innerHTML =   \'' . htmlspecialchars($this->damTitle) . '\'; browse_links_setAdditionalValue(\'usedamcolumn\', true); dam_browse_links_setTitle(true,' . $enforce . ');';
+			}
+		}
+		return $bodyTagAdditions;
+	}
+	
 }
 
 if (defined('TYPO3_MODE') && $TYPO3_CONF_VARS[TYPO3_MODE]['XCLASS']['ext/dam/compat/class.tx_dam_rtehtmlarea_browse_links.php'])	{
